--- a/inventory/inventory.ini
+++ b/inventory/inventory.ini
@@ -1,2 +1,2 @@
-[local]
-localhost ansible_ssh_user=keshav-chandak ansible_ssh_pass=2003
+[myhosts]
+localhost ansible_user=keshav-chandak ansible_password=2003 ansible_connection=local ansible_become=yes ansible_become_password=2003
