--- a/k8s/frontend.yml
+++ b/k8s/frontend.yml
@@ -21,7 +21,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: frontend
+  name: frontend-service
 
 spec:
   selector:
@@ -31,4 +31,4 @@ spec:
     - protocol: TCP
       port: 5173
       targetPort: 5173
-      odePort: 30001
+      nodePort: 30001
