Improved frontend and backend docker

--- a/k8s/frontend.yml
+++ b/k8s/frontend.yml
@@ -26,9 +26,9 @@ metadata:
 spec:
   selector:
       app: frontend
-  type: LoadBalancer
+  # type: clusterIP
   ports:
     - protocol: TCP
       port: 5173
       targetPort: 5173
-      nodePort: 30001
+      # nodePort: 30001
