--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,11 @@
-FROM node:18-alpine
-WORKDIR /frontend
+FROM node:18-alpine as build-stage
+WORKDIR /app
 COPY package*.json ./
-COPY . .
 RUN npm install
-EXPOSE 5173
-CMD ["npm", "run", "dev"]
+COPY . .
+
+
+CMD ["npm", "run", "build"]
 
 # Stage 2: Serve built react app with nginx
 FROM nginx:1.21.1-alpine as production-stage
@@ -17,5 +18,5 @@ COPY --from=build-stage /app/dist .
 
 # Add the Nginx configuration to handle client-side routing
 COPY nginx.conf /etc/nginx/conf.d/default.conf
-
+EXPOSE 5173
 CMD ["nginx", "-g", "daemon off;"]
